--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "skipLibCheck": true,
     "strict": true,
     "noEmit": true,
+    "noEmitOnError":true,
     "esModuleInterop": true,
     "module": "esnext",
     "moduleResolution": "node",
